--- a/alpha/event/templates/events/event_detail_page.html
+++ b/alpha/event/templates/events/event_detail_page.html
@@ -30,6 +30,7 @@
     <link href="{{STATIC_URL}}styles/styles-new.css" rel="stylesheet" type="text/css" />
     <link href="{{STATIC_URL}}styles/event/conversation.css" rel="stylesheet" type="text/css" />
     <link href="{{STATIC_URL}}styles/profile-table.css" rel="stylesheet" type="text/css" />
+    <link href="{{STATIC_URL}}styles/event/image-viewer.css" rel="stylesheet" type="text/css" />
 
     <script src="http://maps.googleapis.com/maps/api/js?sensor=false&libraries=places&language=en"></script>        
     <script>
@@ -44,6 +45,7 @@
     <script src="{{STATIC_URL}}js/actions/claim-event.js" type="text/javascript"></script>
     <script src="{{STATIC_URL}}js/event/jquery.bxslider.min.js" type="text/javascript"></script>
     <script src="{{STATIC_URL}}js/event/event-days-switcher.js" type="text/javascript"></script>
+    <script src="{{STATIC_URL}}js/event/image-viewer.js" type="text/javascript"></script>
     <script src="{{STATIC_URL}}js/event/eventpage.js" type="text/javascript"></script>
 {% endblock %}    
 
@@ -63,22 +65,33 @@
     <div id="fb-root"></div>
     <div class="primary-content">
         <h1>
-            <a href="{% event_link event %}">{{event.name}}</a>            
+            <a href="{% event_link event %}">{{event.name}}</a>
         </h1>
         <div class="content">
             <div class="event-wrapper">
                 <div class="event-photo{% if event.event_type == "MULTIDAY" %}{% if not event.venue_account_owner or not event.venue_account_owner.public %} multiday{% endif %}{% endif %}">
-                    {% if event.sorted_images.count > 0 %}
-                        <a id="photoFancy"  rel="galery" href="/media/{{ event.sorted_images.0.picture }}">
-                            <img class="center-cropped" 
-                                src="{% cropped_thumbnail event.sorted_images.0 "cropping" height=265 %}">
-                            <div class="detail-view"></div>
-                        </a>
-                    {% else %}
+                    {% if event.sorted_images.count > 1 %}
+                        <div class="image-viewer">
+                            <div class="image-viewer-content">
+                            {% for image in event.sorted_images %}
+                                <a id="photoFancy"  rel="galery" href="/media/{{ image.picture }}">
+                                    <img class="center-cropped" src="{% cropped_thumbnail image "cropping" height=265 %}">
+                                    <div class="detail-view"></div>
+                                </a>
+                            {% endfor %}
+                            </div>
+
+                            <div class="image-viewer-controls">                                
+                                <div class="next" data-ga-label="Photo Scroll Link"><i class="icon-chevron-right"></i></div>
+                                <div class="prev"><i class="icon-chevron-left"></i></div>
+                                <span class="page-no">1</span> of <span id="images-total">{{ event.sorted_images.count }}</span>
+                            </div>
+                        </div>
+                    {% elif event.sorted_images.count > 0 %}
                         <div class="center-cropped default" style="background-image: url('{{STATIC_URL}}images/default-event.jpg');"></div>
                     {% endif %}
                     {% if event.venue_account_owner and event.venue_account_owner.public %}
-                    <footer>                        
+                    <footer>
                         Submitted by 
                         <a href="{% url 'public_venue_account' event.venue_account_owner.slug %}">
                             {{ event.venue_account_owner.venue.name }}
@@ -92,9 +105,9 @@
                     <div class="title-wrapper">
                         <div class="event-price">
                         {% if event.price and event.price != "$" %}
-                            {{event.price}}                            
+                            {{event.price}}
                         {% else %}
-                            Price not set                            
+                            Price not set
                         {% endif %}
                         </div>
                     </div>
@@ -186,19 +199,6 @@
                     </ul>
                     {% endif %}
                 </div>
-                {% if event.sorted_images.count > 1 %}
-                    <div class="images-list">
-                    {% for image in event.sorted_images_tail %}
-                        <a id="photoFancy" rel="galery" href="/media/{{ image.picture }}">
-                            <div class="mini-image-preview-wrapper">
-                                <img class="mini-image-preview" src="{% cropped_thumbnail image "cropping" height=50 %}">
-                            </div>
-                            
-                        </a>
-
-                    {% endfor %}
-                    </div>
-                {% endif %}
                 <div class="show-times">
                     {% if event.event_type == "SINGLE" %}
                         <header>
