--- a/alpha/event/templates/events/event_detail_page.html
+++ b/alpha/event/templates/events/event_detail_page.html
@@ -88,7 +88,10 @@
                             </div>
                         </div>
                     {% elif event.sorted_images.count > 0 %}
-                        <div class="center-cropped default" style="background-image: url('{{STATIC_URL}}images/default-event.jpg');"></div>
+                         <a id="photoFancy"  rel="galery" href="/media/{{ image.picture }}">
+                            <img class="center-cropped" src="{% cropped_thumbnail image "cropping" height=265 %}">
+                            <div class="detail-view"></div>
+                        </a>
                     {% endif %}
                     {% if event.venue_account_owner and event.venue_account_owner.public %}
                     <footer>
