--- a/alpha/notices/templates/notices/types/transferring.html
+++ b/alpha/notices/templates/notices/types/transferring.html
@@ -3,8 +3,9 @@
     <button type="button" class="close"
             data-type="notice_close_button"
             data-notice-id="{{ notice_id }}">×</button>
-    {{ event_count }} events have been transferred to you. You can
-    <a class="b" href="{{ accept_link }}" data-type="transferring_accept_link">Accept</a>
+    {{ event_count }} events have been transferred to you by CityFusion administration on the {{ date }}.
+    <br/>
+    You can <a class="b" href="{{ accept_link }}" data-type="transferring_accept_link">Accept</a>
     or <a class="b" href="{{ reject_link }}" data-type="transferring_reject_link">Reject</a> them.
     <br/><br/>
     <div data-type="accordion">
