some tuning of event transferring

--- a/alpha/notices/templates/notices/types/transferring.html
+++ b/alpha/notices/templates/notices/types/transferring.html
@@ -1,12 +1,21 @@
 <div class="notice-item" data-type="notice_item">
     {% csrf_token %}
-    <button type="button" class="close"
-            data-type="notice_close_button"
-            data-notice-id="{{ notice_id }}">×</button>
-    {{ event_count }} events have been transferred to you by CityFusion administration on the {{ date }}.
+    {{ event_count }}
+    {% if event_count == 1 %}
+        event has
+    {% else %}
+        events have
+    {% endif %}
+    been transferred to you by CityFusion administration on the {{ date }}.
     <br/>
-    You can <a class="b" href="{{ accept_link }}" data-type="transferring_accept_link">Accept</a>
-    or <a class="b" href="{{ reject_link }}" data-type="transferring_reject_link">Reject</a> them.
+    You can
+    <a class="b" href="{{ accept_link }}" data-type="transferring_accept_link" data-notice-id="{{ notice_id }}">
+        Accept
+    </a>
+    or
+    <a class="b" href="{{ reject_link }}" data-type="transferring_reject_link" data-notice-id="{{ notice_id }}">
+        Reject
+    </a> them.
     <br/><br/>
     <div data-type="accordion">
         <h3>Event list:</h3>
