--- a/alpha/accounts/templates/accounts/_account_events_table.html
+++ b/alpha/accounts/templates/accounts/_account_events_table.html
@@ -17,7 +17,7 @@
             </option>
         {% endfor %}
     </select>
-    <input type="button" value="Execute" class="button standart submit" data-id="execute_button" />
+    <input type="button" value="Execute" class="button standart submit nomargin" data-id="execute_button" />
     <a href="javascript:void;" class="balloon">
         <div class="buttonq"></div>
     </a>
