--- a/alpha/advertising/templates/advertising/stats/list.html
+++ b/alpha/advertising/templates/advertising/stats/list.html
@@ -159,10 +159,10 @@
         </div>
     {% endif %}
 {% else %}
-    <div class="empty">
+    <div class="account-entry-wrapper entry-wrapper">
         <p>You have no ads.</p>
         <p>You can <a href="{% url 'advertising_setup' %}">create</a> new advertising campaign</p>
-    </div>    
+    </div>
 {% endif %}
 
 
