--- a/alpha/home/templates/pages/faq.html
+++ b/alpha/home/templates/pages/faq.html
@@ -7,7 +7,7 @@
 
 {% block page %}
         <h1>FAQ</h1>
-        <div class="primary-content page-primary-content">
+        <div class="primary-content item-primary-content">
             <div class="primary-wrapper">
                 <div class="content page">
                     <div class="main-content">
